bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:8: error: value &&! is not a member of Boolean
    (!testa&&testb) || (testa&&!testb)
                             ^