bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  var testa:Boolean=false
  var testb:Boolean=false
  if (a<0) {testa=true}
  if (b<0) {testb=true}
  if (negative) {testa&&testb}
  else {
    (!testa&&testb) || (testa&&!testb)
  }
}